--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -43,10 +43,12 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">Astro</span><span
-            class="text-slate-500">ship</span
-          >
+        <a href="https://creamvp.com/" class="flex items-center">
+          <img 
+            src="/logo.png" 
+            alt="CreaMVP Logo" 
+            class="h-8 w-auto"
+          />
         </a>
         <div class="block lg:hidden">
           <MenuIcon class="w-4 h-4 text-gray-800" />
@@ -84,15 +86,15 @@ const menuitems = [
           }
         </ul>
         <div class="lg:hidden flex items-center mt-3 gap-4">
-          <Link href="#" style="muted" block size="md">Log in</Link>
-          <Link href="#" size="md" block>Sign up</Link>
+          <Link href="https://academia.creamvp.com/" style="muted" block size="md" target="_blank" rel="noopener">Academia</Link>
+          <Link href="https://forms.creamvp.com/ga9f9e" size="md" block>Diagnosticar</Link>
         </div>
       </MenuItems>
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <a href="#">Log in</a>
-        <Link href="#" size="md">Sign up</Link>
+        <a href="https://academia.creamvp.com/" target="_blank" rel="noopener">Academia</a>
+        <Link href="https://forms.creamvp.com/ga9f9e" size="md">Diagnosticar</Link>
       </div>
     </div>
   </header>
