--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,18 +1,33 @@
 ---
-// @ts-ignore
-import { Icon } from "astro-icon/components";
+import { Picture } from "astro:assets";
+import makeLogo from "@/assets/logos/make_logo.svg";
+import n8nLogo from "@/assets/logos/n8n__logo.svg";
+import openAILogo from "@/assets/logos/open_aiLogo.svg";
+import supabaseLogo from "@/assets/logos/supabase_logo.svg";
 ---
 
 <div class="mt-24">
-  <h2 class="text-center text-slate-500">Works with your technologies</h2>
+  <h2 class="text-center text-slate-500">Tecnologías que potencian tu negocio</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
-
-    <Icon class="size-8 md:size-12" name="simple-icons:react" />
-    <Icon class="size-8 md:size-12" name="simple-icons:svelte" />
-    <Icon class="size-8 md:size-12" name="simple-icons:astro" />
-    <Icon class="size-8 md:size-16" name="simple-icons:tailwindcss" />
-    <Icon class="size-8 md:size-16" name="simple-icons:alpinedotjs" />
-    <Icon class="size-8 md:size-12" name="simple-icons:vercel" />
-
+    <Picture
+      src={makeLogo}
+      alt="Make Logo"
+      class="h-8 md:h-12 w-auto"
+    />
+    <Picture
+      src={n8nLogo}
+      alt="n8n Logo"
+      class="h-8 md:h-12 w-auto"
+    />
+    <Picture
+      src={openAILogo}
+      alt="OpenAI Logo"
+      class="h-8 md:h-12 w-auto"
+    />
+    <Picture
+      src={supabaseLogo}
+      alt="Supabase Logo"
+      class="h-8 md:h-12 w-auto"
+    />
   </div>
 </div>
