--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -16,10 +16,6 @@ const menuitems = [
     ],
   },
   {
-    title: "Pricing",
-    path: "/pricing",
-  },
-  {
     title: "About",
     path: "/about",
   },
@@ -31,11 +27,6 @@ const menuitems = [
     title: "Contact",
     path: "/contact",
   },
-  {
-    title: "Pro Version",
-    badge: true,
-    path: "https://astroship-pro.web3templates.com/",
-  },
 ];
 ---
 
@@ -43,7 +34,7 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="https://creamvp.com/" class="flex items-center">
+        <a href="/" class="flex items-center">
           <img 
             src="/logo.png" 
             alt="CreaMVP Logo" 
