--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,7 +1,12 @@
 ---
-return Astro.redirect("/contacto", 301);
+import Contactform from "@/components/contactform.astro";
+import Container from "@/components/container.astro";
+import Sectionhead from "@/components/sectionhead.astro";
+import Layout from "@/layouts/Layout.astro";
+import { Icon } from "astro-icon/components";
 ---
 
+<Layout title="Contacto">
   <Container>
     <Sectionhead>
       <Fragment slot="title">Contacto</Fragment>
@@ -37,3 +42,4 @@ return Astro.redirect("/contacto", 301);
     </div>
   </Container>
 </Layout>
+
