--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,5 +1,4 @@
 ---
-import Contactform from "@/components/contactform.astro";
 import Container from "@/components/container.astro";
 import Sectionhead from "@/components/sectionhead.astro";
 import Layout from "@/layouts/Layout.astro";
@@ -9,35 +8,34 @@ import { Icon } from "astro-icon/components";
 <Layout title="Contacto">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">Contacto</Fragment>
-      <Fragment slot="desc">We are a here to help.</Fragment>
+      <Fragment slot="title">Podemos ayudarte</Fragment>
+      <Fragment slot="desc">Escribemos, te toma 2 minutos y podemos ahorrarte horas</Fragment>
     </Sectionhead>
 
-    <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
-      <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contact Astroship</h2>
+    <div class="grid md:grid-cols-5 gap-10 mx-auto max-w-4xl mt-16">
+      <div class="md:col-span-2">
+        <h2 class="font-medium text-2xl text-gray-800">Contáctanos</h2>
         <p class="text-lg leading-relaxed text-slate-500 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+          Si deseas agendar una llamada llena este formulario y te enviaremos un enlace para agendar
         </p>
         <div class="mt-5">
           <div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@astroshipstarter.com"
-              >hello@astroshipstarter.com</a
-            >
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
-            >
+            <span>Santa Fè, Mérida, CP 97314</span>
           </div>
         </div>
       </div>
-      <div>
-        <Contactform />
+      <div class="md:col-span-3">
+        <iframe
+          width="auto"
+          height="700"
+          src="https://d1dc1abf.sibforms.com/serve/MUIFAOFlwEqftyEgNU2GwCDqgNeI0Oa4FfDDVFwK20H__PWrqMA51QRzKDwPjY5RVzqvwMFm9ztUTeUyx6sg9UDEe1r1EgyJKn0vznhs1WDLhkvXa-Rr5LfXLkM4pa1M5RKS41IU6Uy8ZFTIjxxw-VQH977k2bD2wVtI3pUah0hLTYaHOwMI1escgrC9qPZe9PWVhxy9pz4wT-Gk"
+          frameborder="0"
+          scrolling="auto"
+          allowfullscreen
+          class="w-full max-w-full mx-auto block"
+          style="min-height: 305px;"
+        ></iframe>
       </div>
     </div>
   </Container>
