se agrego la imagen para el servicio de automatizacion

--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -3,6 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import Container from "@/components/container.astro";
 import { Picture } from "astro:assets";
 import heroImage from "@/assets/hero.png";
+import automatizacionImage from "@/assets/automatizacion.png";
 ---
 
 <Layout title="Servicios">
@@ -30,7 +31,7 @@ import heroImage from "@/assets/hero.png";
         </div>
         <div class="md:col-span-2">
           <Picture
-            src={heroImage}
+            src={automatizacionImage}
             alt="Automatizaciones e IA"
             class="w-full rounded-lg"
             width={400}
