--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -4,6 +4,10 @@ import Container from "@/components/container.astro";
 import { Picture } from "astro:assets";
 import heroImage from "@/assets/hero.png";
 import automatizacionImage from "@/assets/automatizacion.png";
+import dashboardImage from "@/assets/dashboard.png";
+import aplicacionesInternasImage from "@/assets/aplicaciones-internas.png";
+import mvpsImage from "@/assets/mvps.png";
+import agentesConversacionalesImage from "@/assets/agentes-conversacionales.png";
 ---
 
 <Layout title="Servicios">
@@ -44,7 +48,7 @@ import automatizacionImage from "@/assets/automatizacion.png";
       <div id="dashboards" class="grid md:grid-cols-5 gap-8 items-center">
         <div class="md:col-span-2 order-2 md:order-1">
           <Picture
-            src={heroImage}
+            src={dashboardImage}
             alt="Dashboards"
             class="w-full rounded-lg"
             width={400}
@@ -73,7 +77,7 @@ import automatizacionImage from "@/assets/automatizacion.png";
         </div>
         <div class="md:col-span-2">
           <Picture
-            src={heroImage}
+            src={aplicacionesInternasImage}
             alt="Aplicaciones internas"
             class="w-full rounded-lg"
             width={400}
@@ -86,7 +90,7 @@ import automatizacionImage from "@/assets/automatizacion.png";
       <div id="mvp" class="grid md:grid-cols-5 gap-8 items-center">
         <div class="md:col-span-2 order-2 md:order-1">
           <Picture
-            src={heroImage}
+            src={mvpsImage}
             alt="MVPs"
             class="w-full rounded-lg"
             width={400}
@@ -115,7 +119,7 @@ import automatizacionImage from "@/assets/automatizacion.png";
         </div>
         <div class="md:col-span-2">
           <Picture
-            src={heroImage}
+            src={agentesConversacionalesImage}
             alt="Agentes conversacionales"
             class="w-full rounded-lg"
             width={400}
